--- a/TTB_PCB_PQM/IFM/IFM.csproj
+++ b/TTB_PCB_PQM/IFM/IFM.csproj
@@ -203,6 +203,12 @@
     <Compile Include="Common\Views\DkWaitForm.Designer.cs">
       <DependentUpon>DkWaitForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\SYS\view_sys_user.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\SYS\view_sys_user.Designer.cs">
+      <DependentUpon>view_sys_user.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\SYS\view_sys_roles.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -239,12 +245,6 @@
     <Compile Include="Views\CRM\view_CRM_01_005.Designer.cs">
       <DependentUpon>view_CRM_01_005.cs</DependentUpon>
     </Compile>
-    <Compile Include="Views\SYS\view_SYS_01_001.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Views\SYS\view_SYS_01_001.Designer.cs">
-      <DependentUpon>view_SYS_01_001.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -273,6 +273,9 @@
     <EmbeddedResource Include="Common\Views\DkWaitForm.resx">
       <DependentUpon>DkWaitForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\SYS\view_sys_user.resx">
+      <DependentUpon>view_sys_user.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\SYS\view_sys_roles.resx">
       <DependentUpon>view_sys_roles.cs</DependentUpon>
     </EmbeddedResource>
@@ -290,9 +293,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\CRM\view_CRM_01_005.resx">
       <DependentUpon>view_CRM_01_005.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Views\SYS\view_SYS_01_001.resx">
-      <DependentUpon>view_SYS_01_001.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
