--- a/TTB_PCB_PQM/IFM/IFM.csproj
+++ b/TTB_PCB_PQM/IFM/IFM.csproj
@@ -161,6 +161,7 @@
       <HintPath>..\AOI_PQM\bin\Debug\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -194,6 +195,7 @@
   <ItemGroup>
     <Compile Include="ClsSession.cs" />
     <Compile Include="Common\DkGridView.cs" />
+    <Compile Include="Common\pgsqlconnection_NewDB.cs" />
     <Compile Include="Common\pgsqlconnection.cs" />
     <Compile Include="Common\mysqlconnection.cs" />
     <Compile Include="Common\OnGrid\DeleteRow.cs" />
@@ -204,6 +206,12 @@
     </Compile>
     <Compile Include="Common\Views\DkWaitForm.Designer.cs">
       <DependentUpon>DkWaitForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NIDEC\SMT\View_STM_Final_Check.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\NIDEC\SMT\View_STM_Final_Check.Designer.cs">
+      <DependentUpon>View_STM_Final_Check.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\NIDEC\SMT\View_STM_Tool_Master.cs">
       <SubType>Form</SubType>
@@ -286,6 +294,9 @@
     </Compile>
     <EmbeddedResource Include="Common\Views\DkWaitForm.resx">
       <DependentUpon>DkWaitForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\NIDEC\SMT\View_STM_Final_Check.resx">
+      <DependentUpon>View_STM_Final_Check.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\NIDEC\SMT\View_STM_Tool_Master.resx">
       <DependentUpon>View_STM_Tool_Master.cs</DependentUpon>
