--- a/TTB_PCB_PQM/IFM/IFM.csproj
+++ b/TTB_PCB_PQM/IFM/IFM.csproj
@@ -207,11 +207,29 @@
     <Compile Include="Common\Views\DkWaitForm.Designer.cs">
       <DependentUpon>DkWaitForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\NIDEC\SMT\View_STM_Cutting.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\NIDEC\SMT\View_STM_Cutting.Designer.cs">
+      <DependentUpon>View_STM_Cutting.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NIDEC\SMT\View_STM_Final_Check_Auto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\NIDEC\SMT\View_STM_Final_Check_Auto.Designer.cs">
+      <DependentUpon>View_STM_Final_Check_Auto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\NIDEC\SMT\View_STM_Final_Check.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\NIDEC\SMT\View_STM_Final_Check.Designer.cs">
       <DependentUpon>View_STM_Final_Check.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NIDEC\SMT\View_STM_Master_Tool.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\NIDEC\SMT\View_STM_Master_Tool.Designer.cs">
+      <DependentUpon>View_STM_Master_Tool.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\NIDEC\SMT\View_STM_Tool_Master.cs">
       <SubType>Form</SubType>
@@ -295,8 +313,17 @@
     <EmbeddedResource Include="Common\Views\DkWaitForm.resx">
       <DependentUpon>DkWaitForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\NIDEC\SMT\View_STM_Cutting.resx">
+      <DependentUpon>View_STM_Cutting.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\NIDEC\SMT\View_STM_Final_Check_Auto.resx">
+      <DependentUpon>View_STM_Final_Check_Auto.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\NIDEC\SMT\View_STM_Final_Check.resx">
       <DependentUpon>View_STM_Final_Check.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\NIDEC\SMT\View_STM_Master_Tool.resx">
+      <DependentUpon>View_STM_Master_Tool.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\NIDEC\SMT\View_STM_Tool_Master.resx">
       <DependentUpon>View_STM_Tool_Master.cs</DependentUpon>
@@ -446,6 +473,8 @@
     <Content Include="Resources\ifm_vertical.ico" />
     <Content Include="Resources\Load.png" />
     <Content Include="Resources\New.png" />
+    <None Include="Resources\OK.png" />
+    <None Include="Resources\NG.png" />
     <Content Include="Resources\Save.png" />
   </ItemGroup>
   <ItemGroup />
