--- a/TTB_PCB_PQM/IFM/packages.config
+++ b/TTB_PCB_PQM/IFM/packages.config
@@ -36,4 +36,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
+  <package id="WMPLib" version="1.0.0" targetFramework="net452" developmentDependency="true" />
 </packages>
