--- a/TTB_PCB_PQM/IFM.DataAccess/IFM.DataAccess.csproj
+++ b/TTB_PCB_PQM/IFM.DataAccess/IFM.DataAccess.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CQRS\Commands\NIDEC\SMT\SMTMounter_DeleteMasterCommand.cs" />
+    <Compile Include="CQRS\Commands\NIDEC\SMT\SMTMounter_UpdateMasterCommand.cs" />
     <Compile Include="CQRS\Commands\NIDEC\SMT\SMTTool_UpdateMasterCommand.cs" />
     <Compile Include="CQRS\Commands\NIDEC\SMT\SMTTool_DeleteMasterCommand.cs" />
     <Compile Include="CQRS\Commands\SystemDeleteUserCommand .cs" />
@@ -55,6 +57,7 @@
     <Compile Include="CQRS\Dispatchers\SystemDispatcher.cs" />
     <Compile Include="CQRS\DkDispatcher.cs" />
     <Compile Include="CQRS\Queries\NIDEC\SMT\SMTToolGetDistinctModelQuery.cs" />
+    <Compile Include="CQRS\Queries\NIDEC\SMT\SMTMounter_GetMasterQuery.cs" />
     <Compile Include="CQRS\Queries\NIDEC\SMT\SMTTool_GetMasterQuery.cs" />
     <Compile Include="CQRS\Queries\SystemGetDistinctViewsQuery.cs" />
     <Compile Include="CQRS\Queries\SystemGetDistinctUserQuery.cs" />
@@ -74,6 +77,7 @@
     <Compile Include="Models\DbModel.cs" />
     <Compile Include="Models\GlobalEnums.cs" />
     <Compile Include="Models\IDbModel.cs" />
+    <Compile Include="Models\NIDEC\m_smt_mounter.cs" />
     <Compile Include="Models\NIDEC\m_smt_tool.cs" />
     <Compile Include="Models\SYS\m_assignment.cs" />
     <Compile Include="Models\SYS\m_user_role.cs" />
